--- a/src/index.css
+++ b/src/index.css
@@ -6,4 +6,12 @@
 body {
   margin: 0;
   padding: 0;
+  -ms-overflow-style: none;
+  /* IE and Edge */
+  scrollbar-width: none;
+  /* Firefox */
+}
+
+body::-webkit-scrollbar {
+  display: none;
 }
